Fix nav links on small screens

--- a/css/base.scss
+++ b/css/base.scss
@@ -22,7 +22,7 @@ $content_width:   796px;
 $content_padding:  16px;
 
 $medium-screen-width: $content_width + 2 * $content_padding;
-$small-screen-width:  480px;
+$small-screen-width:  560px;
 
 /*------------------------------------------------------------------------------
   Placeholder selectors
